<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/library_graph">

    <navigation
        android:id="@+id/library_graph"
        app:startDestination="@id/mediaLibraryFragment">
        <fragment
            android:id="@+id/mediaLibraryFragment"
            android:name="com.example.playlist_maker2.ui.media.MediaLibraryFragment"
            android:label="@string/media">
            <action
                android:id="@+id/action_mediaLibraryFragment_to_audioPlayerFragment"
                app:destination="@id/audioPlayerFragment" />
            <action
                android:id="@+id/action_mediaLibraryFragment_to_createPlaylistFragment"
                app:destination="@id/createPlaylistFragment" />
            <action
                android:id="@+id/action_mediaLibraryFragment_to_playlistFragment"
                app:destination="@id/playlistFragment" />
        </fragment>
    </navigation>

    <navigation
        android:id="@+id/search_graph"
        app:startDestination="@id/searchFragment">
        <fragment
            android:id="@+id/searchFragment"
            android:name="com.example.playlist_maker2.ui.search.SearchFragment"
            android:label="@string/search" />
    </navigation>

    <navigation
        android:id="@+id/settings_graph"
        app:startDestination="@id/settingsFragment">
        <fragment
            android:id="@+id/settingsFragment"
            android:name="com.example.playlist_maker2.ui.settings.SettingsFragment"
            android:label="@string/settings" />
    </navigation>

    <fragment
        android:id="@+id/createPlaylistFragment"
        android:name="com.example.playlist_maker2.ui.playlists.create.CreatePlaylistFragment"
        android:label="@string/new_playlist" />

    <fragment
        android:id="@+id/playlistFragment"
        android:name="com.example.playlist_maker2.ui.playlists.details.PlaylistFragment"
        android:label="@string/playlists">
        <argument
            android:name="playlistId"
            app:argType="long" />
        <action
            android:id="@+id/action_playlistFragment_to_audioPlayerFragment"
            app:destination="@id/audioPlayerFragment" />
        <action
            android:id="@+id/action_playlistFragment_to_editPlaylistFragment"
            app:destination="@id/editPlaylistFragment" />
    </fragment>

    <fragment
        android:id="@+id/editPlaylistFragment"
        android:name="com.example.playlist_maker2.ui.playlists.edit.EditPlaylistFragment"
        android:label="@string/edit_playlist">
        <argument
            android:name="playlistId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/audioPlayerFragment"
        android:name="com.example.playlist_maker2.ui.player.AudioPlayerFragment"
        android:label="@string/app_name">
        <argument
            android:name="track"
            android:defaultValue="@null"
            app:argType="com.example.playlist_maker2.domain.models.Track"
            app:nullable="true" />
        <action
            android:id="@+id/action_audioPlayerFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
    </fragment>

</navigation>
