<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_main"
        android:orientation="vertical"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_height"
            android:layout_marginBottom="@dimen/max_margin"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/default_fontSize"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/ys_display_medium">

            </TextView>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_btn"
            style="@style/MainScreenButton"
            android:text="@string/search"
            android:textColor="@color/black"
            app:icon="@drawable/ic_search"
            app:iconTint="@color/black"
            app:iconPadding="@dimen/default_margin"
            app:iconGravity="textStart"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/media_btn"
            android:layout_marginTop="@dimen/default_margin"
            style="@style/MainScreenButton"
            android:text="@string/media"
            android:textColor="@color/black"
            app:icon="@drawable/media"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_btn"
            android:layout_marginTop="@dimen/default_margin"
            style="@style/MainScreenButton"
            android:text="@string/settings"
            android:textColor="@color/black"
            app:icon="@drawable/settings"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
