<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backdround_w_b"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_height"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:text="@string/settings"
            android:textColor="@color/yp_color_text"
            android:textSize="@dimen/default_fontSize" />

        <LinearLayout
            style="@style/settingsBtns"
            android:layout_marginTop="@dimen/max_margin">

            <TextView
                style="@style/settingsBtnsTextStyle"
                android:text="@string/dark_theme_text" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchDarkTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_app"
            style="@style/settingsBtns">

            <TextView
                style="@style/settingsBtnsTextStyle"
                android:layout_weight="1"
                android:text="@string/share_app_text" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/chatSupport"
            style="@style/settingsBtns">

            <TextView
                style="@style/settingsBtnsTextStyle"
                android:layout_weight="1"
                android:text="@string/writeTo_support" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/group_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/userAgreement"
            style="@style/settingsBtns">

            <TextView
                style="@style/settingsBtnsTextStyle"
                android:layout_weight="1"
                android:text="@string/user_agreement_text" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_forward" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
