<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/zero"
        android:paddingTop="@dimen/zero"
        android:background="@color/backdround_w_b">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_height"
            android:orientation="horizontal"
            android:gravity="center_vertical"

            >

            <LinearLayout
                android:id="@+id/arr_back"
                android:layout_width="@dimen/ic_back_arrow_size"
                android:layout_height="@dimen/ic_back_arrow_size"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                >

                <ImageView
                    android:layout_width="@dimen/min_icon_size"
                    android:layout_height="@dimen/min_icon_size"
                    android:src="@drawable/ic_back_arrow_24"
                    app:tint="@color/iconColor" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/default_padding"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/yp_color_text"
                    android:text="@string/settings"
                    android:textSize="@dimen/default_fontSize"
                    android:gravity="center_vertical"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            style="@style/settingsBtns"
            android:layout_marginTop="@dimen/max_margin"
            >
            <TextView
                style="@style/settingsBtnsTextStyle"
                android:text="@string/dark_theme_text"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchDarkTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_app"
            style="@style/settingsBtns"

            >
            <TextView
                style="@style/settingsBtnsTextStyle"
                android:text="@string/share_app_text"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share_icon" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/chatSupport"
            style="@style/settingsBtns"
            >

            <TextView
                style="@style/settingsBtnsTextStyle"
                android:text="@string/writeTo_support"
                android:layout_weight="1"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/group_icon"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/userAgreement"
            style="@style/settingsBtns"
            >

            <TextView
                style="@style/settingsBtnsTextStyle"
                android:text="@string/user_agreement_text"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_forward"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>